k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: delivery-demo
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
